with  zome call decoder

--- a/ui/server/.env
+++ b/ui/server/.env
@@ -1,3 +1,4 @@
 INSTANCE_NAME=alice-instance
-ZOME_CREATE_MULTISIG=multisig
+ZOME_MULTISIG=multisig
+ZOME_ORGANIZATIONS=organizations
 ENGINE_API_KEY=service:multisig-graphql:nxAV0oRibDA1GX4CfVUH1g
