--- a/ui/server/package.json
+++ b/ui/server/package.json
@@ -18,7 +18,9 @@
     "apollo-datasource": "^0.1.3",
     "apollo-datasource-rest": "^0.8.0",
     "apollo-server": "2.6.1",
+    "apollo-server-express": "^2.13.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "graphql": "^14.2.1",
     "nodemon": "^1.18.4"
   },
