--- a/ui/server/package.json
+++ b/ui/server/package.json
@@ -19,6 +19,7 @@
     "apollo-datasource-rest": "^0.8.0",
     "apollo-server": "2.6.1",
     "apollo-server-express": "^2.13.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^14.2.1",
