--- a/ui/client/package.json
+++ b/ui/client/package.json
@@ -12,6 +12,7 @@
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
     "apollo-link-http": "^1.5.15",
+    "apollo-link-ws": "^1.0.20",
     "emotion": "^9.2.12",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
@@ -22,6 +23,7 @@
     "react-dom": "^16.9.0-alpha.0",
     "react-emotion": "^9.2.12",
     "react-scripts": "3.0.1",
+    "subscriptions-transport-ws": "^0.9.16",
     "typescript": "^3.7.3"
   },
   "scripts": {
