--- a/ui/server/package.json
+++ b/ui/server/package.json
@@ -23,7 +23,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^14.2.1",
-    "nodemon": "^1.18.4"
+    "graphql-redis-subscriptions": "^2.2.1",
+    "nodemon": "^1.18.4",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
     "apollo-link": "^1.2.3",
