--- a/ui/client/package.json
+++ b/ui/client/package.json
@@ -12,10 +12,10 @@
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
     "apollo-link-http": "^1.5.15",
-    "apollo-link-ws": "^1.0.20",
     "emotion": "^9.2.12",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
+    "immutable": "^4.0.0-rc.12",
     "lodash.flowright": "^3.5.0",
     "polished": "^3.4.1",
     "react": "^16.9.0-alpha.0",
