view my organizations

--- a/ui/client/package.json
+++ b/ui/client/package.json
@@ -32,16 +32,21 @@
     "eject": "react-scripts eject",
     "codegen": "apollo client:codegen --target typescript --watch",
     "start:server": "cd ../../ui/server/ && npm run start:agents",
+    "start:server-dev": "cd ../../ui/server/ && npm run start:agents-dev",
     "ui:alice": "REACT_APP_SERVER_PORT=4000 PORT=8080 react-app-rewired start",
     "ui:bob": "REACT_APP_SERVER_PORT=4001 PORT=8081 react-app-rewired start",
+    "ui:charlie": "REACT_APP_SERVER_PORT=4002 PORT=8082 react-app-rewired start",
     "hc:bob": "cd ../../dna && holochain ",
     "start:ui": "concurrently \"npm run ui:alice\" \"npm run ui:bob\"",
+    "start:ui-dev": "concurrently \"npm run ui:alice\" \"npm run ui:bob\" \"npm run ui:charlie\"",
     "start:apollo-server": "cd ../../ui/server/ && npm run start:agents",
-    "start:holochain": "cd ../../dna && holochain -c conductor-config.toml",
-    "start:holochain-alice": "cd ../../dna && holochain -c conductor-alice.toml",
-    "start:holochain-bob": "cd ../../dna && holochain -c conductor-bob.toml",
+    "start:holochain": "cd ../../dna && holochain -c conductor-prod.toml",
     "package": "cd ../../dna && hc package",
-    "hc:test": "cd ../../dna && hc test"
+    "hc:test": "cd ../../dna && hc test",
+    "start:hc-alice": "cd ../../dna && hc run -p 8888 -a Alice --networked sim2h",
+    "start:hc-bob": "cd ../../dna && hc run -p 8889 -a Bob --networked sim2h",
+    "start:hc-charlie": "cd ../../dna && hc run -p 8890 -a Charlie --networked sim2h",
+    "start:holochain-dev": "concurrently \"npm run start:hc-alice\" \"npm run start:hc-bob\" \"npm run start:hc-charlie\"" 
   },
   "resolutions": {
     "@types/graphql": "14.0.1",
