--- a/ui/server/package.json
+++ b/ui/server/package.json
@@ -8,8 +8,9 @@
     "start": "AGENT_PORT=8889 nodemon src/index.js",
     "start:alice": "AGENT_PORT=8888 INSTANCE_NAME=alice-instance PORT=4000 nodemon src/index.js",
     "start:bob": "AGENT_PORT=8889 INSTANCE_NAME=bob-instance PORT=4001 nodemon src/index.js",
-    "start:charlie": "AGENT_PORT=8890 INSTANCE_NAME=charlie-instance PORT=4002 nodemon src/index.js",
-    "start:agents": "concurrently \"npm run start:alice\" \"npm run start:bob\""
+    "start:charlie": "AGENT_PORT=8890 INSTANCE_NAME=test-instance PORT=4002 nodemon src/index.js",
+    "start:agents": "concurrently \"npm run start:alice\" \"npm run start:bob\"",
+    "start:agents-dev": "concurrently \"npm run start:alice\" \"npm run start:bob\" \"npm run start:charlie\""
   },
   "author": "",
   "license": "ISC",
